--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" title="Ir para o GitHub" target="_blank">
+                    <a href="https://github.com/AdrianRSouza" title="Ir para o GitHub" target="_blank">
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
@@ -81,44 +81,7 @@
     </section>
 
     <section class="projetos" id="projetos">
-        <h2 class="titulo">Meus Projetos</h2>
-
-        <div class="container-projetos">
-            <div class="projeto ativo">
-                <a href="#" target="_blank">
-                    <img src="./src/imagens/projeto-gta.png" alt="Projeto GTA">
-                    <h3>Projeto 1</h3>
-
-                    <div class="informacoes-projeto">
-                        <p>Projeto feito usando HTML, CSS e JavaScript</p>
-                        <p>🔗 Ver no GitHub Pages</p>
-                    </div>
-                </a>
-            </div>
-            <div class="projeto ativo">
-                <a href="#" target="_blank">
-                    <img src="./src/imagens/projeto-listagem-pokemon.png" alt="Projeto Listagem-Pokemon">
-                    <h3>Projeto 2</h3>
-
-                    <div class="informacoes-projeto">
-                        <p>Projeto feito usando HTML, CSS e JavaScript</p>
-                        <p>🔗 Ver no GitHub Pages</p>
-                    </div>
-                </a>
-            </div>
-            <div class="projeto ativo">
-                <a href="#" target="_blank">
-                    <img src="./src/imagens/projeto-one-piece.png" alt="Projeto One Piece"">
-                            <h3>Projeto 3</h3>
-
-                    <div class=" informacoes-projeto">
-                    <p>Projeto feito usando HTML, CSS e JavaScript</p>
-                    <p>🔗 Ver no GitHub Pages</p>
-                    </div>
-                </a>
-            </div>
-        </div>
-
+        
         <button class="btn-mostrar-projetos">Mostrar mais</button>
     </section>
 
