--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
     </section>
 
     <section class="projetos" id="projetos">
+        <div class="container-projetos">
+            <div class="projeto ativo">
+                <a href="https://adrianrsouza.github.io/Projeto-Date-a-Live/" target="_blank">
+                    <img src="./src/imagens/projeto-gta.png" alt="Projeto Date a Live">
+                    <h3>Projeto 1</h3>
+
+                    <div class="informacoes-projeto">
+                        <p>Projeto feito usando HTML, CSS e JavaScript</p>
+                        <p>🔗 Ver no GitHub Pages</p>
+                    </div>
+                </a>
+        </div>
         
         <button class="btn-mostrar-projetos">Mostrar mais</button>
     </section>
